--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -21,5 +21,17 @@
     "alert_success_text":"Successful operation",
     "invalid_email_no_data":"Please use a valid email",
     "invalid_name_no_data":"Please use a valid name",
-    "invalid_password_no_data":"Please ad a valid password"
+    "invalid_password_no_data":"Please use a valid password",
+    "delete_user_confirmation_title":"Are you sure you want to delete this user?",
+    "text_yes":"Yes",
+    "text_no":"No",
+    "button_text_close":"Close",
+    "edit_user_modal_title":"Edit User",
+    "form_text_description":"Description",
+    "invalid_description_no_data":"Please use a valid description",
+    "rows_per_page":"Rows per page",
+    "change_password_text":"Change password",
+    "form_text_password_repeat":"Repeat password",
+    "password_change_empty_field":"Please fill both fields",
+    "password_change_missmatch":"Passwords don't match"
 }
