--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -21,5 +21,17 @@
     "alert_success_text":"Exito en la operación",
     "invalid_email_no_data":"Por favor ingresa un correo valido",
     "invalid_name_no_data":"Por favor ingresa un nombre valido",
-    "invalid_password_no_data":"Por favor ingresa una contraseña valida"
+    "invalid_password_no_data":"Por favor ingresa una contraseña valida",
+    "delete_user_confirmation_title":"¿Estas seguro de que quieres eliminar este usuario?",
+    "text_yes":"Si",
+    "text_no":"No",
+    "button_text_close":"Cerrar",
+    "edit_user_modal_title":"Editar Usuario",
+    "form_text_description":"Descripción",
+    "invalid_description_no_data":"Por favor ingresa una descripción valida",
+    "rows_per_page":"Entradas por pagina",
+    "change_password_text":"Cambiar Contraseña",
+    "form_text_password_repeat":"Repita la contraseña",
+    "password_change_empty_field":"Por favor llene ambos campos",
+    "password_change_missmatch":"Las contraseñas no son iguales"
 }
